Fixed video previews on mobile

--- a/themes/sti/src/scss/pages/_home_videos.scss
+++ b/themes/sti/src/scss/pages/_home_videos.scss
@@ -31,13 +31,12 @@
 
   @extend .embed-responsive;
 
-  min-height: 320px;
-  max-width: 320px;
+  min-height: 240px;
+  min-width: 320px;
 
   @include susy-breakpoint($tablet-small) {
-
-    min-height: 380px;
-    max-width: 640px;
+     min-height: 380px;
+     min-width: 180px;
   }
 
 }
@@ -45,6 +44,13 @@
 .videoplaceholder {
     cursor: pointer;
     opacity: 0.7;
+
+    img {
+    	width: 300px;
+    	@include susy-breakpoint($tablet-small) {
+	    width: unset;
+    	}
+    }
 }
 
 .videoplaceholder:hover {
@@ -75,4 +81,8 @@
   li {
     box-sizing: border-box;
   }
+}
+
+.carousel-inner {
+    margin: auto;
 }
